samples/_failures_safe/1761727506_76ed5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_833801f6.c: In function ‘main’:
./samples/SAFE/__tmp_833801f6.c:158:15: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  158 |     if (fgets(input
      |               ^~~~~
      |               int
./samples/SAFE/__tmp_833801f6.c:158:15: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_833801f6.c:158:20: error: expected ‘)’ at end of input
  158 |     if (fgets(input
      |              ~     ^
      |                    )
./samples/SAFE/__tmp_833801f6.c:158:9: error: too few arguments to function ‘fgets’
  158 |     if (fgets(input
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_833801f6.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_833801f6.c:158:5: error: expected declaration or statement at end of input
  158 |     if (fgets(input
      |     ^~
